--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿altair==6.0.0
+altair==6.0.0
 altgraph==0.17.5
 antlr4-python3-runtime==4.7.2
 attrs==25.4.0
@@ -48,4 +48,3 @@ typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.6.2
 watchdog==6.0.0
-
