--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
 streamlit==1.52.1
+streamlit-js-eval == 0.1.7
 sympy==1.14.0
 tenacity==9.1.2
 toml==0.10.2
@@ -48,3 +49,4 @@ typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.6.2
 watchdog==6.0.0
+
